<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:scrollbarSize="2dp"
    tools:context=".ui.detail.DetailActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_mediaCover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/event_mediaCover"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/placeholder_media_cover" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:text="@string/event_category"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="12sp"
            android:fontFamily="@font/quicksand_bold_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_mediaCover"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/event_name"
            android:textColor="?attr/colorOnBackground"
            android:textSize="32sp"
            android:fontFamily="@font/quicksand_medium_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_category"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_ownerName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/event_ownerName_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_regular_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_ownerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:text="@string/event_ownerName"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_bold_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ownerName_title"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_beginTime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/event_beginTime_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_regular_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ownerName"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_beginTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/event_beginTime"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_bold_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_beginTime_title"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_quota_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/event_quota_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_regular_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_beginTime"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/event_quota"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_bold_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quota_title"
            app:layout_constraintVertical_bias="0" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorSecondaryVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quota" />

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:padding="4dp"
            android:text="@string/event_description_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            android:fontFamily="@font/quicksand_medium_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/event_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description_title"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_schedule_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/quicksand_regular_400"
            android:padding="4dp"
            android:text="@string/event_schedule_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_schedule_begin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/quicksand_regular_400"
            android:padding="4dp"
            android:text="@string/event_schedule_begin_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_schedule_title"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_schedule_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/event_schedule_begin"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_regular_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tv_schedule_begin_title"
            app:layout_constraintTop_toBottomOf="@id/tv_schedule_title"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_schedule_end_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/quicksand_regular_400"
            android:padding="4dp"
            android:text="@string/event_schedule_end_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_schedule_begin_title"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_schedule_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/event_schedule_end"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_regular_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tv_schedule_end_title"
            app:layout_constraintTop_toBottomOf="@id/tv_schedule_begin_title"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_cityName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/quicksand_regular_400"
            android:padding="4dp"
            android:text="@string/event_cityName_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_schedule_end"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/quicksand_bold_700"
            android:padding="4dp"
            android:text="@string/event_cityName_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cityName_title"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="24dp"
            android:padding="4dp"
            android:text="@string/free_register"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/quicksand_bold_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cityName"
            app:layout_constraintVertical_bias="0"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
